# N_Body_Problem

./: CMakeLists.txt  README.md  wsl_cuda_setup_readme.md
cuda_setup/: deviceQueryMini.cu  setup_cuda_wsl.sh
inc/: body.h  config.h  device_buffer_gpu.h  gpu_error_check.h  universal_constants.h  vector_math.h
simulation_configs/: n_body_gravity_configs.json
src/: create_window.h  n_body_collision.cpp  n_body_electro_elastic.cpp  n_body_gravity_inelastic.cpp  three_body_gravity_inelastic.cpp  two_body_gravity_inelastic.cpp  universal_constants.h  vector_math.h
src/electro_static_sim/: CMakeLists.txt  n_body_electro_elastic.cpp
src/gravity_sim/: CMakeLists.txt  n_body_gravity_inelastic.cpp
src/gravity_sim_gpu/: CMakeLists.txt  gpu_n_body_gravity_inelastic.cu
src/hard_sphere_molecular_dyn/: CMakeLists.txt
src/hard_sphere_molecular_dyn/osmosis/: CMakeLists.txt  osmosis.cpp
src/hard_sphere_molecular_dyn/particles_in_a_box/: CMakeLists.txt  particles_in_a_box.cpp
